--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "fx3costa/laravelchartjs": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "mckenziearts/laravel-notify": "^2.4"
+        "maatwebsite/excel": "^3.1",
+        "mcamara/laravel-localization": "^1.8",
+        "mckenziearts/laravel-notify": "^2.4",
+        "spatie/laravel-permission": "^6.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
